Renamed Product properties to ProductTier

--- a/src/Admin/Views/Tools/StripeSubscriptions.cshtml
+++ b/src/Admin/Views/Tools/StripeSubscriptions.cshtml
@@ -149,7 +149,7 @@
             <th>Id</th>
             <th>Customer Email</th>
             <th>Status</th>
-            <th>Product</th>
+            <th>Product Tier</th>
             <th>Current Period End</th>
         </tr>
         </thead>
