--- a/src/Core/MailTemplates/Handlebars/Auth/RegistrationVerifyEmail.text.hbs
+++ b/src/Core/MailTemplates/Handlebars/Auth/RegistrationVerifyEmail.text.hbs
@@ -1,7 +1,7 @@
 ﻿{{#>BasicTextLayout}}
 Verify your email address below to finish creating your account.
 
-If you did not request this email from Bitwarden, you can safely ignore this it.
+If you did not request this email from Bitwarden, you can safely ignore it.
 
 {{{Url}}}
 
