Add providerId to the tool conttoller
Signed-off-by: Cy Okeke <cokeke@bitwarden.com>

--- a/src/Admin/Views/Tools/CreateUpdateTransaction.cshtml
+++ b/src/Admin/Views/Tools/CreateUpdateTransaction.cshtml
@@ -23,6 +23,14 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label asp-for="ProviderId"></label>
+                <input type="text" class="form-control" asp-for="ProviderId">
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md">
             <div class="form-group">
                 <label asp-for="Date"></label>
