Moved PlanType enum to Bit.Core.Billing.Enums

--- a/src/Admin/AdminConsole/Views/Organizations/Edit.cshtml
+++ b/src/Admin/AdminConsole/Views/Organizations/Edit.cshtml
@@ -1,5 +1,6 @@
 @using Bit.Admin.Enums;
 @using Bit.Admin.Models
+@using Bit.Core.Billing.Enums
 @using Bit.Core.Enums
 @inject Bit.Admin.Services.IAccessControlService AccessControlService
 @model OrganizationEditModel
