--- a/src/Admin/AdminConsole/Views/Shared/_OrganizationFormScripts.cshtml
+++ b/src/Admin/AdminConsole/Views/Shared/_OrganizationFormScripts.cshtml
@@ -1,5 +1,6 @@
 @inject IWebHostEnvironment HostingEnvironment
 @using Bit.Admin.Utilities
+@using Bit.Core.Billing.Enums
 @using Bit.Core.Enums
 @model OrganizationEditModel
 
