Add IUserRepository.SearchDetailsAsync that includes the field HasPremiumAccess

--- a/src/Admin/Views/Users/Index.cshtml
+++ b/src/Admin/Views/Users/Index.cshtml
@@ -69,7 +69,7 @@
                             {
                                 <i class="fa fa-times-circle-o fa-lg fa-fw text-muted" title="Email Not Verified"></i>
                             }
-                            @if(await userService.TwoFactorIsEnabledAsync(user))
+                            @if(await userService.TwoFactorIsEnabledAsync(user, user.HasPremiumAccess))
                             {
                                 <i class="fa fa-lock fa-lg fa-fw" title="2FA Enabled"></i>
                             }
