Update new user and trial initiation email content

--- a/src/Core/MailTemplates/Handlebars/Welcome.text.hbs
+++ b/src/Core/MailTemplates/Handlebars/Welcome.text.hbs
@@ -1,37 +1,48 @@
 ﻿{{#>FullTextLayout}}
-Welcome to Bitwarden and thank you for creating an account! Now you can extend robust security to all of your online experiences and devices. 
+Welcome to Bitwarden!
 
-Your Master Password is the only way you can unlock the Vault and only you hold the key. Memorize it, or write it down and keep it in a safe place.
+Here are a few simple steps to get up and running with Bitwarden Password Manager:
 
 
-Get Started: Install Bitwarden
+1. Install the browser extension
 ============
 
-You can access the Bitwarden Vault from anywhere and any device at the web vault ({{WebVaultUrl}}/?utm_source=welcome_email&utm_medium=email). You can also download and install Bitwarden on any desktop, device and browser (http://www.bitwarden.com/download).
+Autofill passwords, save new logins, access the password generator, and more from the Bitwarden browser extension. The extension keeps Bitwarden easily accessible so you can be secure while online.
+Install the Extension (http://www.bitwarden.com/download)
 
 
-Download Options
+2. Add passwords to your vault
 ============
 
-http://www.bitwarden.com/download
+Your secure vault is ready to safely store your sensitive information. Add logins, credit cards, notes, and identities for fast access and autofilling!
+Add Passwords to Your Vault ({{WebVaultUrl}}/?utm_source=welcome_email&utm_medium=email)
 
 
-Securely Share using Bitwarden Organizations
+3. Keep your master password safe and enable biometrics
 ============
 
-Bitwarden makes it easy to securely share passwords for teams and enterprises through Organizations. Join an Organization if invited, or launch a new one anytime from the Web Vault ({{WebVaultUrl}}/?utm_source=welcome_email&utm_medium=email) with the + New Organization button.
+Vault security starts with your Bitwarden master password. Ensure it is strong and complex, then memorize it or store it in a safe place. Now you're ready to enable biometrics for a faster login experience with fingerprint or FaceID.
+Enable Biometrics (https://bitwarden.com/learning/unlock-your-vault-with-biometrics/)
 
 
-Login to Bitwarden
+Learning Center
 ============
 
-{{WebVaultUrl}}/?utm_source=welcome_email&utm_medium=email
+Instructional videos and best practice guides for every level are just a click away.
+Visit the Learning Center (https://bitwarden.com/learning/)
 
 
-We're here for you
+Bring Bitwarden to Work
 ============
 
-Check out our Help (http://www.bitwarden.com/help) site for documentation, join the Bitwarden Community forums (https://community.bitwarden.com/) and connect with other enthusiasts on Reddit (https://www.reddit.com/r/Bitwarden/). If you have any questions or issues, contact us (http://www.bitwarden.com/contact).
+Are you using Bitwarden for personal or family use? Join the Bitwarden fans who are bringing the password manager they know and love to their workplace.
+Bring It (https://bitwarden.com/go/bring-bitwarden-to-work/#get-started)
+
+
+Signed up for Bitwarden Secrets Manager?
+============
+
+Developer and DevOps teams trust Secrets Manager to secure infrastructure and machine secrets. If you signed up for Bitwarden Secrets Manager, you'll receive separate emails with instructions on how to set it up. In the meantime, check out the Secrets Manager quick start resource (https://bitwarden.com/help/secrets-manager-quick-start/).
 
 
 Stay safe and secure,
