--- a/bitwarden_license/src/Sso/Views/Shared/_Layout.cshtml
+++ b/bitwarden_license/src/Sso/Views/Shared/_Layout.cshtml
@@ -7,15 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - SSO</title>
 
-    <link rel="stylesheet" href="~/css/webfonts.css" />
-    <environment include="Development">
-        <link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.min.css" asp-append-version="true" />
-        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    </environment>
+    <link rel="stylesheet" href="~/assets/site.css" asp-append-version="true" />
     @RenderSection("Head", required: false)
 </head>
 <body>
@@ -43,18 +35,7 @@
         </div>
     </div>
 
-    <environment include="Development">
-        <script src="~/lib/jquery/jquery.slim.js"></script>
-        <script src="~/lib/popper/popper.js"></script>
-        <script src="~/lib/bootstrap/js/bootstrap.js"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="~/lib/jquery/jquery.slim.min.js" asp-append-version="true"></script>
-        <script src="~/lib/popper/popper.min.js" asp-append-version="true"></script>
-        <script src="~/lib/bootstrap/js/bootstrap.min.js" asp-append-version="true"></script>
-    </environment>
-
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/assets/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
