Update style and text

--- a/src/Core/MailTemplates/Handlebars/TrialInitiation.text.hbs
+++ b/src/Core/MailTemplates/Handlebars/TrialInitiation.text.hbs
@@ -8,41 +8,41 @@ Here are a few simple steps to get up and running with Bitwarden Password Manage
 ============
 
 Autofill passwords, save new logins, access the password generator, and more from the Bitwarden browser extension. The extension keeps Bitwarden easily accessible so you can be secure while online.
-Install the Extension (http://www.bitwarden.com/download)
+Install the extension (http://www.bitwarden.com/download)
 
 
 2. Add passwords to your vault
 ============
 
 Your secure vault is ready to safely store your sensitive information. Add logins, credit cards, notes, and identities for fast access and autofilling!
-Add Passwords to Your Vault ({{WebVaultUrl}}/?utm_source=welcome_email&utm_medium=email)
+Add passwords to your vault ({{WebVaultUrl}}/?utm_source=welcome_email&utm_medium=email)
 
 
 3. Keep your master password safe and enable biometrics
 ============
 
 Vault security starts with your Bitwarden master password. Ensure it is strong and complex, then memorize it or store it in a safe place. Now you're ready to enable biometrics for a faster login experience with fingerprint or FaceID.
-Enable Biometrics (https://bitwarden.com/learning/unlock-your-vault-with-biometrics/)
+Enable biometrics (https://bitwarden.com/learning/unlock-your-vault-with-biometrics/)
 
 
 Learning Center
 ============
 
 Instructional videos and best practice guides for every level are just a click away.
-Visit the Learning Center (https://bitwarden.com/learning/)
+Visit the learning center (https://bitwarden.com/learning/)
 
 
 Bring Bitwarden to Work
 ============
 
 Are you using Bitwarden for personal or family use? Join the Bitwarden fans who are bringing the password manager they know and love to their workplace.
-Bring It (https://bitwarden.com/go/bring-bitwarden-to-work/#get-started)
+Bring it (https://bitwarden.com/go/bring-bitwarden-to-work/#get-started)
 
 
 Signed up for Bitwarden Secrets Manager?
 ============
 
-Developer and DevOps teams trust Secrets Manager to secure infrastructure and machine secrets. If you signed up for Bitwarden Secrets Manager, you'll receive separate emails with instructions on how to set it up. In the meantime, check out the Secrets Manager quick start resource (https://bitwarden.com/help/secrets-manager-quick-start/).
+If you signed up for Bitwarden Secrets Manager to secure infrastructure and machine secrets, get up and running quickly with the Secrets Manager quick start resource (https://bitwarden.com/help/secrets-manager-quick-start/).
 
 
 Stay safe and secure,
