--- a/src/Core/MailTemplates/Handlebars/Welcome.text.hbs
+++ b/src/Core/MailTemplates/Handlebars/Welcome.text.hbs
@@ -15,7 +15,7 @@ Install the extension (http://www.bitwarden.com/download)
 ============
 
 Your secure vault is ready to safely store your sensitive information. Add logins, credit cards, notes, and identities for fast access and autofilling!
-Add passwords to your vault ({{WebVaultUrl}}/?utm_source=welcome_email&utm_medium=email)
+Add passwords to your vault ({{{WebVaultUrl}}}/?utm_source=welcome_email&utm_medium=email)
 
 
 3. Keep your master password safe and enable biometrics
