--- a/src/Core/MailTemplates/Handlebars/TrialInitiation.text.hbs
+++ b/src/Core/MailTemplates/Handlebars/TrialInitiation.text.hbs
@@ -1,39 +1,50 @@
 {{#>FullTextLayout}}
-    Welcome to Bitwarden! You can now get started with secure credential management and extend the benefits of end-to-end encryption across your entire organization.
+Welcome to Bitwarden!
 
-    Your Master Password is the only way to unlock your account and only you hold the key. Memorize it, or write it down and keep it in a safe place.
-
-
-    Install Bitwarden
-    ============
-
-    Access your Bitwarden account from anywhere and any device at the web vault ({{WebVaultUrl}}/?utm_source=welcome_email&utm_medium=email). For added convenience, download and install Bitwarden on any desktop, device and browser (http://www.bitwarden.com/download).
+Here are a few simple steps to get up and running with Bitwarden Password Manager:
 
 
-    Download Options
-    ============
+1. Install the browser extension
+============
 
-    http://www.bitwarden.com/download
-
-
-    Securely Share using Bitwarden Organizations
-    ============
-
-    Bitwarden makes it easy for teams and enterprises to securely share passwords, developer secrets, and passkeys via Organizations. Join an Organization if invited, or launch a new one anytime from the Web App ({{WebVaultUrl}}/?utm_source=welcome_email&utm_medium=email) with the + New Organization button.
+Autofill passwords, save new logins, access the password generator, and more from the Bitwarden browser extension. The extension keeps Bitwarden easily accessible so you can be secure while online.
+Install the extension (http://www.bitwarden.com/download)
 
 
-    Login to Bitwarden
-    ============
+2. Add passwords to your vault
+============
 
-    {{WebVaultUrl}}/?utm_source=welcome_email&utm_medium=email
-
-
-    Bitwarden is Here for You
-    ============
-
-    Check out our Help (http://www.bitwarden.com/help) site for documentation, join the Bitwarden Community forums (https://community.bitwarden.com/) and connect with other enthusiasts on Reddit (https://www.reddit.com/r/Bitwarden/). If you have any questions or issues, contact support (http://www.bitwarden.com/contact).
+Your secure vault is ready to safely store your sensitive information. Add logins, credit cards, notes, and identities for fast access and autofilling!
+Add passwords to your vault ({{{WebVaultUrl}}}/?utm_source=welcome_email&utm_medium=email)
 
 
-    Stay safe and secure,
-    The Bitwarden Team
+3. Keep your master password safe and enable biometrics
+============
+
+Vault security starts with your Bitwarden master password. Ensure it is strong and complex, then memorize it or store it in a safe place. Now you're ready to enable biometrics for a faster login experience with fingerprint or FaceID.
+Enable biometrics (https://bitwarden.com/learning/unlock-your-vault-with-biometrics/)
+
+
+Learning Center
+============
+
+Instructional videos and best practice guides for every level are just a click away.
+Visit the learning center (https://bitwarden.com/learning/)
+
+
+Bring Bitwarden to Work
+============
+
+Are you using Bitwarden for personal or family use? Join the Bitwarden fans who are bringing the password manager they know and love to their workplace.
+Bring it (https://bitwarden.com/go/bring-bitwarden-to-work/#get-started)
+
+
+Signed up for Bitwarden Secrets Manager?
+============
+
+If you signed up for Bitwarden Secrets Manager to secure infrastructure and machine secrets, get up and running quickly with the Secrets Manager quick start resource (https://bitwarden.com/help/secrets-manager-quick-start/).
+
+
+Stay safe and secure,
+The Bitwarden Team
 {{/FullTextLayout}}
