--- a/src/Admin/AdminConsole/Views/Organizations/_ViewInformation.cshtml
+++ b/src/Admin/AdminConsole/Views/Organizations/_ViewInformation.cshtml
@@ -7,7 +7,7 @@
     <dd id="org-plan" class="col-sm-8 col-lg-9">@Model.Organization.Plan</dd>
 
     <dt class="col-sm-4 col-lg-3">Expires</dt>
-    <dd id="expiration-date" class="col-sm-8 col-lg-9">@(Model.Organization.ExpirationDate?.ToString() ?? "-")</dd>
+    <dd id="org-expiration-date" class="col-sm-8 col-lg-9">@(Model.Organization.ExpirationDate?.ToString() ?? "-")</dd>
 
     <dt class="col-sm-4 col-lg-3">Users</dt>
     <dd id="org-user-seats" class="col-sm-8 col-lg-9">
