--- a/src/Admin/AdminConsole/Views/Providers/CreateMultiOrganizationEnterprise.cshtml
+++ b/src/Admin/AdminConsole/Views/Providers/CreateMultiOrganizationEnterprise.cshtml
@@ -1,4 +1,3 @@
-@using Bit.Core.AdminConsole.Enums.Provider
 @using Bit.Core.Billing.Enums
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 
@@ -9,23 +8,22 @@
 }
 
 <h1>Create Multi-organization Enterprise Provider</h1>
-
 <div>
     <form class="form-group">
+        <div asp-validation-summary="All" class="alert alert-danger"></div>
         <div class="form-group">
             <label asp-for="OwnerEmail"></label>
             <input type="text" class="form-control" asp-for="OwnerEmail">
         </div>
-
         <div class="row">
             <div class="col-sm">
                 <div class="form-group">
                     @{
-                    var multiOrgPlans = new List<PlanType>
-                    {
-                    PlanType.EnterpriseAnnually,
-                    PlanType.EnterpriseMonthly
-                    };
+                        var multiOrgPlans = new List<PlanType>
+                        {
+                            PlanType.EnterpriseAnnually,
+                            PlanType.EnterpriseMonthly
+                        };
                     }
                     <label asp-for="Plan"></label>
                     <select class="form-control" asp-for="Plan" asp-items="Html.GetEnumSelectList(multiOrgPlans)">
@@ -40,5 +38,6 @@
                 </div>
             </div>
         </div>
+        <button type="submit" class="btn btn-primary mb-2">Create Provider</button>
     </form>
 </div>
