--- a/src/Admin/AdminConsole/Views/Providers/CreateReseller.cshtml
+++ b/src/Admin/AdminConsole/Views/Providers/CreateReseller.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Create Reseller Provider</h1>
 <div>
-    <form class="form-group">
+    <form class="form-group" method="post" asp-action="CreateReseller">
         <div asp-validation-summary="All" class="alert alert-danger"></div>
         <div class="form-group">
             <label asp-for="Name"></label>
