--- a/src/Admin/AdminConsole/Views/Providers/CreateMultiOrganizationEnterprise.cshtml
+++ b/src/Admin/AdminConsole/Views/Providers/CreateMultiOrganizationEnterprise.cshtml
@@ -9,7 +9,7 @@
 
 <h1>Create Multi-organization Enterprise Provider</h1>
 <div>
-    <form class="form-group">
+    <form class="form-group" method="post" asp-action="CreateMultiOrganizationEnterprise">
         <div asp-validation-summary="All" class="alert alert-danger"></div>
         <div class="form-group">
             <label asp-for="OwnerEmail"></label>
