--- a/src/Admin/AdminConsole/Views/Providers/CreateMsp.cshtml
+++ b/src/Admin/AdminConsole/Views/Providers/CreateMsp.cshtml
@@ -6,7 +6,7 @@
 @inject Bit.Core.Services.IFeatureService FeatureService
 
 @{
-    ViewData["Title"] = "Create MSP Provider";
+    ViewData["Title"] = "Create Managed Service Provider";
 }
 
 <h1>Create Managed Service Provider</h1>
