--- a/src/Admin/Views/Users/_ViewInformation.cshtml
+++ b/src/Admin/Views/Users/_ViewInformation.cshtml
@@ -12,8 +12,11 @@
     <dt class="col-sm-4 col-lg-3">Email Verified</dt>
     <dd class="col-sm-8 col-lg-9">@(Model.EmailVerified ? "Yes" : "No")</dd>
 
+    @* FEATURE FLAG TO CONTROLL IF THIS SHOULD ACTUALLY SHOW *@
+    @if(Model.AccountDeprovisioningEnabled){
     <dt class="col-sm-4 col-lg-3">Domain Verified</dt>
     <dd class="col-sm-8 col-lg-9">@(Model.DomainVerified? "Yes" : "No")</dd>
+    }
 
     <dt class="col-sm-4 col-lg-3">Using 2FA</dt>
     <dd class="col-sm-8 col-lg-9">@(Model.TwoFactorEnabled ? "Yes" : "No")</dd>
