--- a/src/Admin/Sass/site.scss
+++ b/src/Admin/Sass/site.scss
@@ -10,15 +10,7 @@ $info: #555555;
 $warning: #bf7e16;
 $danger: #dd4b39;
 
-$theme-colors: (
-  "primary": $primary,
-  "primary-accent": $primary-accent,
-  "success": $success,
-  "info": $info,
-  "warning": $warning,
-  "danger": $danger,
-  "dark": $dark
-);
+$theme-colors: map-merge($theme-colors, ("primary-accent": $primary-accent));
 
 $font-family-sans-serif: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
