--- a/src/Admin/AdminConsole/Views/Providers/Create.cshtml
+++ b/src/Admin/AdminConsole/Views/Providers/Create.cshtml
@@ -21,8 +21,8 @@
 <form method="post">
     <div asp-validation-summary="All" class="alert alert-danger"></div>
 
-    <div class="form-group">
-        <label asp-for="Type" class="h2"></label>
+    <div class="mb-3">
+        <label asp-for="Type" class="form-label h2"></label>
         @foreach(ProviderType providerType in Enum.GetValues(typeof(ProviderType)))
         {
             var providerTypeValue = (int)providerType;
@@ -30,29 +30,29 @@
                 @Html.RadioButtonFor(m => m.Type, providerType, new { id = $"providerType-{providerTypeValue}", @class = "form-check-input", onclick=$"toggleProviderTypeInfo({providerTypeValue})" })
                 @Html.LabelFor(m => m.Type, providerType.GetDisplayAttribute()?.GetName(), new { @class = "form-check-label align-middle", @for = $"providerType-{providerTypeValue}" })
                 <br/>
-                @Html.LabelFor(m => m.Type, providerType.GetDisplayAttribute()?.GetDescription(), new { @class = "form-check-label small text-muted ml-3 align-top", @for = $"providerType-{providerTypeValue}" })
+                @Html.LabelFor(m => m.Type, providerType.GetDisplayAttribute()?.GetDescription(), new { @class = "form-check-label small text-muted ms-3 align-top", @for = $"providerType-{providerTypeValue}" })
             </div>
         }
     </div>
 
-    <div id="@($"info-{(int)ProviderType.Msp}")" class="form-group @(Model.Type != ProviderType.Msp ? "d-none" : string.Empty)">
+    <div id="@($"info-{(int)ProviderType.Msp}")" class="mb-3 @(Model.Type != ProviderType.Msp ? "d-none" : string.Empty)">
         <h2>MSP Info</h2>
-        <div class="form-group">
-            <label asp-for="OwnerEmail"></label>
+        <div class="mb-3">
+            <label asp-for="OwnerEmail" class="form-label"></label>
             <input type="text" class="form-control" asp-for="OwnerEmail">
         </div>
         @if (FeatureService.IsEnabled(FeatureFlagKeys.EnableConsolidatedBilling))
         {
             <div class="row">
                 <div class="col-sm">
-                    <div class="form-group">
-                        <label asp-for="TeamsMonthlySeatMinimum"></label>
+                    <div class="mb-3">
+                        <label asp-for="TeamsMonthlySeatMinimum" class="form-label"></label>
                         <input type="number" class="form-control" asp-for="TeamsMonthlySeatMinimum">
                     </div>
                 </div>
                 <div class="col-sm">
-                    <div class="form-group">
-                        <label asp-for="EnterpriseMonthlySeatMinimum"></label>
+                    <div class="mb-3">
+                        <label asp-for="EnterpriseMonthlySeatMinimum" class="form-label"></label>
                         <input type="number" class="form-control" asp-for="EnterpriseMonthlySeatMinimum">
                     </div>
                 </div>
@@ -60,18 +60,18 @@
         }
     </div>
 
-    <div id="@($"info-{(int)ProviderType.Reseller}")" class="form-group @(Model.Type != ProviderType.Reseller ? "d-none" : string.Empty)">
+    <div id="@($"info-{(int)ProviderType.Reseller}")" class="mb-3 @(Model.Type != ProviderType.Reseller ? "d-none" : string.Empty)">
         <h2>Reseller Info</h2>
-        <div class="form-group">
-            <label asp-for="Name"></label>
+        <div class="mb-3">
+            <label asp-for="Name" class="form-label"></label>
             <input type="text" class="form-control" asp-for="Name">
         </div>
-        <div class="form-group">
-            <label asp-for="BusinessName"></label>
+        <div class="mb-3">
+            <label asp-for="BusinessName" class="form-label"></label>
             <input type="text" class="form-control" asp-for="BusinessName">
         </div>
-        <div class="form-group">
-            <label asp-for="BillingEmail"></label>
+        <div class="mb-3">
+            <label asp-for="BillingEmail" class="form-label"></label>
             <input type="text" class="form-control" asp-for="BillingEmail">
         </div>
     </div>
