--- a/src/Admin/AdminConsole/Views/Providers/Index.cshtml
+++ b/src/Admin/AdminConsole/Views/Providers/Index.cshtml
@@ -14,10 +14,10 @@
 <div class="row mb-2">
     <div class="col">
         <form class="form-inline mb-2" method="get">
-            <label class="sr-only" asp-for="Name">Name</label>
-            <input type="text" class="form-control mb-2 mr-2" placeholder="Name" asp-for="Name" name="name">
-            <label class="sr-only" asp-for="UserEmail">User email</label>
-            <input type="text" class="form-control mb-2 mr-2" placeholder="User email" asp-for="UserEmail" name="userEmail">
+            <label class="visually-hidden" asp-for="Name">Name</label>
+            <input type="text" class="form-control mb-2 me-2" placeholder="Name" asp-for="Name" name="name">
+            <label class="visually-hidden" asp-for="UserEmail">User email</label>
+            <input type="text" class="form-control mb-2 me-2" placeholder="User email" asp-for="UserEmail" name="userEmail">
             <button type="submit" class="btn btn-primary mb-2" title="Search"><i class="fa fa-search"></i> Search</button>
         </form>
     </div>
