--- a/src/Admin/AdminConsole/Components/Admins.razor
+++ b/src/Admin/AdminConsole/Components/Admins.razor
@@ -1,61 +1,69 @@
+@using Bit.Admin.Services
 @using Bit.Core.AdminConsole.Enums.Provider
-@inject Services.IAccessControlService AccessControlService
+@using Bit.Core.AdminConsole.Services
+
+@inject IAccessControlService AccessControlService
+@inject IProviderService ProviderService
+@inject NavigationManager NavigationManager
 
 <h2>Provider Admins</h2>
 <div class="row">
     <div class="col-8">
         <div class="table-responsive">
-            <table class="table table-striped table-hover">
-                <thead>
-                <tr>
-                    <th style="width: 190px;">Email</th>
-                    <th style="width: 40px;">Status</th>
-                    <th style="width: 30px;"></th>
-                </tr>
-                </thead>
-                <tbody>
-                @if(!Model.ProviderAdmins.Any())
-                {
-                <tr>
-                    <td colspan="6">No results to list.</td>
-                </tr>
-                }
-                else
-                {
-                @foreach(var admin in Model.ProviderAdmins)
-                {
-                <tr>
-                    <td class="align-middle">
-                        @admin.Email
-                    </td>
-                    <td class="align-middle">
-                        @admin.Status
-                    </td>
-                    <td>
-                        @if(admin.Status.Equals(ProviderUserStatusType.Confirmed)
-                        && Model.Provider.Status.Equals(ProviderStatusType.Pending)
-                        && _canResendEmailInvite)
+            <EditForm FormName="ManageAdminsForm" Model="FormModel" OnValidSubmit="OnValidSubmitAsync">
+                <DataAnnotationsValidator />
+                <table class="table table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <th style="width: 190px;">Email</th>
+                        <th style="width: 40px;">Status</th>
+                        <th style="width: 30px;"></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    @if (!Model.ProviderAdmins.Any())
+                    {
+                        <tr>
+                            <td colspan="6">No results to list.</td>
+                        </tr>
+                    }
+                    else
+                    {
+                        @foreach (var admin in Model.ProviderAdmins)
                         {
-                        <!--@if(@TempData["InviteResentTo"] != null && @TempData["InviteResentTo"].ToString() == @admin.UserId.Value.ToString())
-                        {
-                        <button class="btn btn-outline-success btn-sm disabled" disabled>Invite Resent!</button>
+                            <tr>
+                                <td class="align-middle">
+                                    @admin.Email
+                                </td>
+                                <td class="align-middle">
+                                    @admin.Status
+                                </td>
+                                <td>
+                                    @if (admin.Status.Equals(ProviderUserStatusType.Confirmed)
+                                         && Model.Provider.Status.Equals(ProviderStatusType.Pending)
+                                         && _canResendEmailInvite)
+                                    {
+                                        @if (InviteResentTo == admin.UserId!.Value)
+                                        {
+                                            <button class="btn btn-outline-success btn-sm disabled" disabled>Invite Resent!</button>
+                                        }
+                                        else
+                                        {
+                                            <button class="btn btn-outline-secondary btn-sm"
+                                               type="submit"
+                                               name="FormModel.UserId"
+                                               value="@admin.Id">
+                                                Resend Setup Invite
+                                            </button>
+                                        }
+                                    }
+                                </td>
+                            </tr>
                         }
-                        else
-                        {
-                        <a class="btn btn-outline-secondary btn-sm"
-                           data-id="@admin.Id" asp-controller="Providers"
-                           asp-action="ResendInvite" asp-route-ownerId="@admin.UserId"
-                           asp-route-providerId="@Model.Provider.Id">
-                            Resend Setup Invite
-                        </a>
-                        }-->
-                        }
-                    </td>
-                </tr>
-                }
-                }
-                </tbody>
-            </table>
+                    }
+                    </tbody>
+                </table>
+            </EditForm>
         </div>
     </div>
 </div>
